--- a/.config/kitty/colors/dark.conf
+++ b/.config/kitty/colors/dark.conf
@@ -1,259 +1,259 @@
 foreground #a1a1a1
-background #31343c
+background #2d323b
 cursor #a1a1a1
-color0 #303030
-color1 #d96e6b
-color2 #94ab63
-color3 #c5a360
-color4 #70aaca
-color5 #d07dc5
-color6 #7dbcb0
-color7 #adadbb
-color8 #66676e
-color9 #ff583e
-color10 #a7be76
-color11 #cec46e
-color12 #9dc6b6
-color13 #fda1ba
-color14 #aae695
+color0 #000000
+color1 #c18181
+color2 #91b191
+color3 #c9a989
+color4 #81a1c1
+color5 #b191b1
+color6 #91b1b1
+color7 #a1a1a1
+color8 #4d5058
+color9 #c18181
+color10 #91b191
+color11 #b1b191
+color12 #81a1c1
+color13 #b191b1
+color14 #91b1b1
 color15 #a1a1a1
-color16 #adadbb
-color17 #70aaca
-color18 #70aaca
-color19 #70aaca
-color20 #9dc6b6
-color21 #9dc6b6
-color22 #94ab63
-color23 #7dbcb0
-color24 #70aaca
-color25 #70aaca
-color26 #70aaca
-color27 #9dc6b6
-color28 #94ab63
-color29 #94ab63
-color30 #7dbcb0
-color31 #7dbcb0
-color32 #70aaca
-color33 #70aaca
-color34 #94ab63
-color35 #94ab63
-color36 #7dbcb0
-color37 #7dbcb0
-color38 #7dbcb0
-color39 #7dbcb0
-color40 #a7be76
-color41 #94ab63
-color42 #94ab63
-color43 #7dbcb0
-color44 #aae695
-color45 #aae695
-color46 #a7be76
-color47 #a7be76
-color48 #94ab63
-color49 #7dbcb0
-color50 #aae695
-color51 #aae695
-color52 #d96e6b
-color53 #d07dc5
-color54 #70aaca
-color55 #70aaca
-color56 #70aaca
-color57 #9dc6b6
-color58 #c5a360
-color59 #adadbb
-color60 #adadbb
-color61 #70aaca
-color62 #70aaca
-color63 #9dc6b6
-color64 #94ab63
-color65 #adadbb
-color66 #7dbcb0
-color67 #7dbcb0
-color68 #70aaca
-color69 #70aaca
-color70 #94ab63
-color71 #94ab63
-color72 #7dbcb0
-color73 #7dbcb0
-color74 #7dbcb0
-color75 #7dbcb0
-color76 #94ab63
-color77 #94ab63
-color78 #94ab63
-color79 #7dbcb0
-color80 #aae695
-color81 #aae695
-color82 #a7be76
-color83 #a7be76
-color84 #94ab63
-color85 #7dbcb0
-color86 #aae695
-color87 #aae695
-color88 #d96e6b
-color89 #d96e6b
-color90 #d07dc5
-color91 #d07dc5
-color92 #70aaca
-color93 #70aaca
-color94 #d96e6b
-color95 #adadbb
-color96 #d07dc5
-color97 #d07dc5
-color98 #70aaca
-color99 #70aaca
-color100 #c5a360
-color101 #c5a360
-color102 #adadbb
-color103 #adadbb
-color104 #adadbb
-color105 #70aaca
-color106 #c5a360
-color107 #c5a360
-color108 #adadbb
-color109 #7dbcb0
-color110 #7dbcb0
-color111 #7dbcb0
-color112 #94ab63
-color113 #94ab63
-color114 #adadbb
-color115 #7dbcb0
-color116 #aae695
-color117 #aae695
-color118 #94ab63
-color119 #94ab63
-color120 #94ab63
-color121 #7dbcb0
-color122 #aae695
-color123 #aae695
-color124 #d96e6b
-color125 #d96e6b
-color126 #d07dc5
-color127 #d07dc5
-color128 #d07dc5
-color129 #d07dc5
-color130 #d96e6b
-color131 #d96e6b
-color132 #d07dc5
-color133 #d07dc5
-color134 #d07dc5
-color135 #d07dc5
-color136 #c5a360
-color137 #c5a360
-color138 #adadbb
-color139 #d07dc5
-color140 #d07dc5
-color141 #d07dc5
-color142 #c5a360
-color143 #c5a360
-color144 #c5a360
-color145 #adadbb
-color146 #adadbb
-color147 #adadbb
-color148 #c5a360
-color149 #c5a360
-color150 #c5a360
-color151 #adadbb
-color152 #aae695
-color153 #aae695
-color154 #c5a360
-color155 #c5a360
-color156 #c5a360
-color157 #adadbb
-color158 #aae695
-color159 #aae695
-color160 #ff583e
-color161 #d96e6b
-color162 #d96e6b
-color163 #d07dc5
-color164 #fda1ba
-color165 #fda1ba
-color166 #d96e6b
-color167 #d96e6b
-color168 #d96e6b
-color169 #d07dc5
-color170 #fda1ba
-color171 #fda1ba
-color172 #d96e6b
-color173 #d96e6b
-color174 #adadbb
-color175 #d07dc5
-color176 #fda1ba
-color177 #fda1ba
-color178 #c5a360
-color179 #c5a360
-color180 #c5a360
-color181 #adadbb
-color182 #fda1ba
-color183 #fda1ba
-color184 #cec46e
-color185 #cec46e
-color186 #cec46e
-color187 #cec46e
+color16 #a1a1a1
+color17 #81a1c1
+color18 #81a1c1
+color19 #81a1c1
+color20 #81a1c1
+color21 #81a1c1
+color22 #91b191
+color23 #91b1b1
+color24 #81a1c1
+color25 #81a1c1
+color26 #81a1c1
+color27 #81a1c1
+color28 #91b191
+color29 #91b191
+color30 #91b1b1
+color31 #91b1b1
+color32 #81a1c1
+color33 #81a1c1
+color34 #91b191
+color35 #91b191
+color36 #91b1b1
+color37 #91b1b1
+color38 #91b1b1
+color39 #91b1b1
+color40 #91b191
+color41 #91b191
+color42 #91b191
+color43 #91b1b1
+color44 #91b1b1
+color45 #91b1b1
+color46 #91b191
+color47 #91b191
+color48 #91b191
+color49 #91b1b1
+color50 #91b1b1
+color51 #91b1b1
+color52 #c18181
+color53 #b191b1
+color54 #81a1c1
+color55 #81a1c1
+color56 #81a1c1
+color57 #81a1c1
+color58 #c9a989
+color59 #a1a1a1
+color60 #a1a1a1
+color61 #81a1c1
+color62 #81a1c1
+color63 #81a1c1
+color64 #91b191
+color65 #a1a1a1
+color66 #91b1b1
+color67 #91b1b1
+color68 #81a1c1
+color69 #81a1c1
+color70 #91b191
+color71 #91b191
+color72 #91b1b1
+color73 #91b1b1
+color74 #91b1b1
+color75 #91b1b1
+color76 #91b191
+color77 #91b191
+color78 #91b191
+color79 #91b1b1
+color80 #91b1b1
+color81 #91b1b1
+color82 #91b191
+color83 #91b191
+color84 #91b191
+color85 #91b1b1
+color86 #91b1b1
+color87 #91b1b1
+color88 #c18181
+color89 #c18181
+color90 #b191b1
+color91 #b191b1
+color92 #81a1c1
+color93 #81a1c1
+color94 #c18181
+color95 #a1a1a1
+color96 #b191b1
+color97 #b191b1
+color98 #81a1c1
+color99 #81a1c1
+color100 #c9a989
+color101 #c9a989
+color102 #a1a1a1
+color103 #a1a1a1
+color104 #a1a1a1
+color105 #81a1c1
+color106 #c9a989
+color107 #c9a989
+color108 #a1a1a1
+color109 #91b1b1
+color110 #91b1b1
+color111 #91b1b1
+color112 #91b191
+color113 #91b191
+color114 #a1a1a1
+color115 #91b1b1
+color116 #91b1b1
+color117 #91b1b1
+color118 #91b191
+color119 #91b191
+color120 #91b191
+color121 #91b1b1
+color122 #91b1b1
+color123 #91b1b1
+color124 #c18181
+color125 #c18181
+color126 #b191b1
+color127 #b191b1
+color128 #b191b1
+color129 #b191b1
+color130 #c18181
+color131 #c18181
+color132 #b191b1
+color133 #b191b1
+color134 #b191b1
+color135 #b191b1
+color136 #c9a989
+color137 #c9a989
+color138 #a1a1a1
+color139 #b191b1
+color140 #b191b1
+color141 #b191b1
+color142 #c9a989
+color143 #c9a989
+color144 #c9a989
+color145 #a1a1a1
+color146 #a1a1a1
+color147 #a1a1a1
+color148 #c9a989
+color149 #c9a989
+color150 #c9a989
+color151 #a1a1a1
+color152 #91b1b1
+color153 #91b1b1
+color154 #c9a989
+color155 #c9a989
+color156 #c9a989
+color157 #a1a1a1
+color158 #91b1b1
+color159 #91b1b1
+color160 #c18181
+color161 #c18181
+color162 #c18181
+color163 #b191b1
+color164 #b191b1
+color165 #b191b1
+color166 #c18181
+color167 #c18181
+color168 #c18181
+color169 #b191b1
+color170 #b191b1
+color171 #b191b1
+color172 #c18181
+color173 #c18181
+color174 #a1a1a1
+color175 #b191b1
+color176 #b191b1
+color177 #b191b1
+color178 #c9a989
+color179 #c9a989
+color180 #c9a989
+color181 #a1a1a1
+color182 #b191b1
+color183 #b191b1
+color184 #b1b191
+color185 #b1b191
+color186 #b1b191
+color187 #b1b191
 color188 #a1a1a1
 color189 #a1a1a1
-color190 #cec46e
-color191 #cec46e
-color192 #cec46e
-color193 #cec46e
+color190 #b1b191
+color191 #b1b191
+color192 #b1b191
+color193 #b1b191
 color194 #a1a1a1
-color195 #aae695
-color196 #ff583e
-color197 #ff583e
-color198 #d96e6b
-color199 #d07dc5
-color200 #fda1ba
-color201 #fda1ba
-color202 #ff583e
-color203 #ff583e
-color204 #d96e6b
-color205 #d07dc5
-color206 #fda1ba
-color207 #fda1ba
-color208 #d96e6b
-color209 #d96e6b
-color210 #d96e6b
-color211 #d07dc5
-color212 #fda1ba
-color213 #fda1ba
-color214 #c5a360
-color215 #c5a360
-color216 #c5a360
-color217 #adadbb
-color218 #fda1ba
-color219 #fda1ba
-color220 #cec46e
-color221 #cec46e
-color222 #cec46e
-color223 #cec46e
+color195 #91b1b1
+color196 #c18181
+color197 #c18181
+color198 #c18181
+color199 #b191b1
+color200 #b191b1
+color201 #b191b1
+color202 #c18181
+color203 #c18181
+color204 #c18181
+color205 #b191b1
+color206 #b191b1
+color207 #b191b1
+color208 #c18181
+color209 #c18181
+color210 #c18181
+color211 #b191b1
+color212 #b191b1
+color213 #b191b1
+color214 #c9a989
+color215 #c9a989
+color216 #c9a989
+color217 #a1a1a1
+color218 #b191b1
+color219 #b191b1
+color220 #b1b191
+color221 #b1b191
+color222 #b1b191
+color223 #b1b191
 color224 #a1a1a1
-color225 #fda1ba
-color226 #cec46e
-color227 #cec46e
-color228 #cec46e
-color229 #cec46e
-color230 #cec46e
+color225 #b191b1
+color226 #b1b191
+color227 #b1b191
+color228 #b1b191
+color229 #b1b191
+color230 #b1b191
 color231 #a1a1a1
-color232 #31343c
-color233 #353840
-color234 #3a3d44
-color235 #3f4148
-color236 #43464c
-color237 #484a51
-color238 #4d4f55
-color239 #515359
-color240 #56585d
-color241 #5b5c61
-color242 #5f6166
-color243 #64656a
-color244 #696a6e
-color245 #6d6f72
-color246 #727376
-color247 #77787b
-color248 #7b7c7f
-color249 #808183
-color250 #858587
-color251 #898a8b
-color252 #8e8e90
-color253 #939394
+color232 #2d323b
+color233 #31363f
+color234 #363943
+color235 #3b3f47
+color236 #40444c
+color237 #454950
+color238 #4a4d54
+color239 #4e5258
+color240 #53575d
+color241 #585b61
+color242 #5d6065
+color243 #626469
+color244 #67696e
+color245 #6b6e72
+color246 #707276
+color247 #75777a
+color248 #7a7c7f
+color249 #7f8083
+color250 #848587
+color251 #88898b
+color252 #8d8e90
+color253 #929394
 color254 #979798
 color255 #9c9c9c
