--- a/.config/kitty/colors/darker.conf
+++ b/.config/kitty/colors/darker.conf
@@ -1,5 +1,5 @@
 foreground #a1a1a1
-background #2f333d
+background #2d323c
 cursor #a1a1a1
 color0 #000000
 color1 #c18181
@@ -233,27 +233,27 @@ color228 #b1b191
 color229 #b1b191
 color230 #b1b191
 color231 #a1a1a1
-color232 #2f333d
-color233 #333741
-color234 #383c45
-color235 #3d4049
-color236 #42454d
-color237 #464951
-color238 #4b4e56
-color239 #50535a
-color240 #55575e
-color241 #595c62
-color242 #5e6066
-color243 #63656a
-color244 #686a6f
-color245 #6c6e73
-color246 #717377
-color247 #76777b
-color248 #7b7c7f
+color232 #2d323c
+color233 #313640
+color234 #363b44
+color235 #3b3f48
+color236 #40444c
+color237 #454951
+color238 #4a4d55
+color239 #4e5259
+color240 #53575d
+color241 #585b61
+color242 #5d6066
+color243 #62646a
+color244 #67696e
+color245 #6b6e72
+color246 #707276
+color247 #75777b
+color248 #7a7c7f
 color249 #7f8083
-color250 #848588
-color251 #898a8c
-color252 #8e8e90
+color250 #848587
+color251 #88898b
+color252 #8d8e90
 color253 #929394
 color254 #979798
 color255 #9c9c9c
