--- a/.config/kitty/colors/medium.conf
+++ b/.config/kitty/colors/medium.conf
@@ -1,5 +1,5 @@
 foreground #6a6a6a
-background #fafafa
+background #d9dcdd
 cursor #6a6a6a
 color0 #303030
 color1 #e05661
@@ -16,7 +16,7 @@ color11 #c2b11f
 color12 #118dc3
 color13 #8a69b8
 color14 #51adac
-color15 #6a6a6a
+color15 #525252
 color16 #adadbb
 color17 #3d92cc
 color18 #3d92cc
@@ -189,13 +189,13 @@ color184 #c2b11f
 color185 #c2b11f
 color186 #c2b11f
 color187 #c2b11f
-color188 #6a6a6a
-color189 #6a6a6a
+color188 #525252
+color189 #525252
 color190 #c2b11f
 color191 #c2b11f
 color192 #c2b11f
 color193 #c2b11f
-color194 #6a6a6a
+color194 #525252
 color195 #51adac
 color196 #e05661
 color197 #e05661
@@ -225,35 +225,35 @@ color220 #c2b11f
 color221 #c2b11f
 color222 #c2b11f
 color223 #c2b11f
-color224 #6a6a6a
+color224 #525252
 color225 #8a69b8
 color226 #c2b11f
 color227 #c2b11f
 color228 #c2b11f
 color229 #c2b11f
 color230 #c2b11f
-color231 #6a6a6a
-color232 #fafafa
-color233 #f4f4f4
-color234 #eeeeee
-color235 #e8e8e8
-color236 #e2e2e2
-color237 #dcdcdc
-color238 #d6d6d6
-color239 #cfcfcf
-color240 #cacaca
-color241 #c4c4c4
-color242 #bebebe
-color243 #b8b8b8
-color244 #b2b2b2
-color245 #acacac
-color246 #a6a6a6
-color247 #a0a0a0
-color248 #9a9a9a
-color249 #949494
-color250 #8e8e8e
-color251 #888888
-color252 #828282
-color253 #7c7c7c
-color254 #767676
-color255 #707070
+color231 #525252
+color232 #d9dcdd
+color233 #d3d6d7
+color234 #cdd0d1
+color235 #c8cacb
+color236 #c2c5c5
+color237 #bcbfc0
+color238 #b7b9ba
+color239 #b1b3b4
+color240 #acaeae
+color241 #a6a8a8
+color242 #a0a2a3
+color243 #9b9c9d
+color244 #959797
+color245 #8f9191
+color246 #8a8b8b
+color247 #848586
+color248 #7f8080
+color249 #797a7a
+color250 #737474
+color251 #6e6e6e
+color252 #686969
+color253 #626363
+color254 #5d5d5d
+color255 #575757
