--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,16 +1,19 @@
-# ooooooooooooo                                           
-# 8'   888   `8                                           
-#      888      ooo. .oo.  .oo.   oooo  oooo  oooo    ooo 
-#      888      `888P"Y88bP"Y88b  `888  `888   `88b..8P'  
-#      888       888   888   888   888   888     Y888'    
-#      888       888   888   888   888   888   .o8"'88b   
-#     o888o     o888o o888o o888o  `V88V"V8P' o88'   888o 
+#  ╷                       ╭─ ·    
+# ╶┼╴╭┬╮╷ ╷╭┬╮   ╭─╮╭─╮┌─╮╶┼─╶╮ ╭─╮
+#  │ ││││ │ │    │  │ ││ │ │  │ │ │
+#  ╰╴╵ ╵╰─┘╰┴╯   ╰─╯╰─╯╵ ╵ ╵ ╶┴╴╰─┤
+#                               ╰─╯
                                                         
 # COMPATABILITY {{{
 
-set -g default-terminal "${TERM}"
+# set -g default-terminal "${TERM}"
 # set -g default-terminal "xterm-256color"
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
+# set -g terminal-overrides 'xterm*:Tc:'
+set -g default-terminal "xterm"
+set -g terminal-features "xterm*:clipboard:256color"
+# set -g terminal-overrides 'xterm*:color256:'
 
 # }}}
 # MISC OPTIONS {{{
@@ -22,6 +25,7 @@ set -g renumber-windows on    # stop new tabs appearing behind last
 set -g history-limit 10000    # store 10,000 lines of scrollback
 set -g wrap-search on
 set -g focus-events on
+set -g main-pane-width 100
 
 # }}}
 # MOUSE {{{
@@ -51,7 +55,7 @@ set -g popup-border-lines single
 # STATUS LINE {{{
 
 set -g status-position "bottom"
-set -g status-interval 30
+set -g status-interval 10
 set -g status-style ""
 set -g message-style "bg=colour234"
 set -g message-command-style "bg=colour234"
@@ -117,7 +121,7 @@ bind-key M-c send-keys -R \; clear-history
 # bind -n 'M-w' if-shell "$is_vim" 'send-keys Escape g C-w q' 'killp'
 bind -n 'M-w' killp
 
-bind -n 'M-r' splitw -h \; select-pane -L \; splitw -v \; select-pane -U \; killp \; select-pane -R \; killp
+# bind -n 'M-r' splitw -h \; select-pane -L \; splitw -v \; select-pane -U \; killp \; select-pane -R \; killp
 
 # ZOOM
 bind -n M-z resize-pane -Z
@@ -180,6 +184,9 @@ bind -T copy-mode-vi u send -X halfpage-up
 bind -T copy-mode-vi d send -X halfpage-down
 bind -T copy-mode-vi M-u send -X halfpage-up
 bind -T copy-mode-vi M-d send -X halfpage-down
+
+bind -T copy-mode-vi 'C-k' send -X previous-prompt
+bind -T copy-mode-vi 'C-j' send -X next-prompt
 
 bind -T copy-mode-vi -n Escape send -X clear-selection
 
