--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,8 @@
-# oooo    oooo  o8o      .       .               
-# `888   .8P'   `"'    .o8     .o8               
-#  888  d8'    oooo  .o888oo .o888oo oooo    ooo 
-#  88888[      `888    888     888    `88.  .8'  
-#  888`88b.     888    888     888     `88..8'   
-#  888  `88b.   888    888 .   888 .    `888'    
-# o888o  o888o o888o   "888"   "888"     .8'     
-#                                    .o..P'      
-#                                    `Y8P'       
+# ╷   ·  ╷  ╷                 ╭─ ·    
+# │╭╴╶╮ ╶┼╴╶┼╴╷ ╷   ╭─╮╭─╮┌─╮╶┼─╶╮ ╭─╮
+# ├┴╮ │  │  │ │ │   │  │ ││ │ │  │ │ │
+# ╵ ╰╶┴╴ ╰╴ ╰╴╰─┤   ╰─╯╰─╯╵ ╵ ╵ ╶┴╴╰─┤
+#             ╰─╯                  ╰─╯
 
 # FONT {{{
 
@@ -14,18 +10,10 @@ font_size 17.0
 
 disable_ligatures always
 
-# font_family      Consolas
-# italic_font      Consolas
-# bold_font        Consolas
-# bold_italic_font Consolas
-
-font_family      Custom Sans Regular
-italic_font      Custom Sans Italic
-bold_font        Custom Sans Bold
-bold_italic_font Custom Sans Bold Italic
-
-
-# symbol_map U+00A9,U+00AE,U+203C,U+2049,U+20E3,U+2122,U+2139,U+2194-U+2199,U+21A9-U+21AA,U+231A,U+231B,U+2328,U+23CF,U+23E9-U+23F3,U+23F8-U+23FA,U+24C2,U+25AA,U+25AB,U+25B6,U+25C0,U+25FB-U+25FE,U+2600-U+27EF,U+2934,U+2935,U+2B00-U+2BFF,U+3030,U+303D,U+3297,U+3299,U+1F000-U+1F02F,U+1F0A0-U+1F0FF,U+1F100-U+1F64F,U+1F680-U+1F6FF,U+1F910-U+1F96B,U+1F980-U+1F9E0 Noto Emoji
+font_family      Iosevka Custom Regular
+italic_font      Iosevka Custom Italic
+bold_font        Iosevka Custom Bold
+bold_italic_font Iosevka Custom Bold Italic
 
 # }}}
 # SETTINGS {{{
@@ -160,7 +148,7 @@ map cmd+shift+[ send_text all \x1b{
 map cmd+shift+\ send_text all \x1b|
 map cmd+shift+] send_text all \x1b}
 map cmd+shift+` send_text all \x1b~
-" }}}
+# }}}
 # KEYBINDS {{{
 
 map ctrl+shift+c copy_to_clipboard
@@ -175,29 +163,65 @@ map option+h send_text all \x1bh
 map ctrl+tab send_text all \x1b[1;5I
 map ctrl+shift+tab send_text all \x1b[1;6I
 
-map ctrl+1 combine
-    \ : launch --type background ~/.config/kitty/theme light
-    \ : set_colors ~/.config/kitty/colors/light.conf
-    \ : launch --type background tmux refresh-client
+# map ctrl+1 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient0.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+2 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient1.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+3 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient2.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+4 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient3.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+5 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient4.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+6 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient5.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+7 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient6.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+8 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient7.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+9 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient8.conf
+#     \ : launch --type background tmux refresh-client
+# map ctrl+0 combine
+#     \ : launch --type background ~/.config/kitty/theme light
+#     \ : set_colors ~/.config/kitty/colors/gradient9.conf
+#     \ : launch --type background tmux refresh-client
 
-map ctrl+2 combine
+map ctrl+0 combine
     \ : launch --type background ~/.config/kitty/theme light
     \ : set_colors ~/.config/kitty/colors/medium.conf
     \ : launch --type background tmux refresh-client
 
-map ctrl+3 combine
+map ctrl+9 combine
     \ : launch --type background ~/.config/kitty/theme dark
     \ : set_colors ~/.config/kitty/colors/dark.conf
-    \ : launch --type background tmux refresh-client
-
-map ctrl+4 combine
-    \ : launch --type background ~/.config/kitty/theme darkest
-    \ : set_colors ~/.config/kitty/colors/darkest.conf
     \ : launch --type background tmux refresh-client
 
 map ctrl+shift+r load_config_file
 map cmd+shift+r load_config_file
 
 # }}}
+
+# cursor_trail 1
+cursor_trail 0
+cursor_trail_start_threshold 20
+cursor_trail_decay 0.05 0.2
 
 # vim: foldmethod=marker
